--- a/html.html
+++ b/html.html
@@ -1,261 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GSAP ScrollTrigger Paragraphs with Scrub</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GSAP ScrollTrigger Paragraphs with Scrub</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+      .container {
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+      }
 
-    .container {
-      width: 100%;
-      height: 100vh;
-      position: relative;
-      overflow: hidden;
-    }
+      section {
+        min-height: 100vh;
+        position: absolute;
+      }
 
-    section {
-      min-height: 100vh;
-      position: absolute;
-    }
+      /** START: SECTION 1 **/
 
-    /** START: SECTION 1 **/
+      .section-1 {
+        width: 100%;
+        height: 100vh;
+        background-image: url("first.jpg");
+        background-size: cover;
+        background-position: center;
+        /* background-attachment: fixed; */
+      }
 
-    .section-1 {
-      width: 100%;
-      height: 100vh;
-      background-image: url("first.jpg");
-      background-size: cover;
-      background-position: center;
-      /* background-attachment: fixed; */
-    }
+      .section-1 p {
+        font-size: 28px;
+        opacity: 0;
+        color: white;
+        font-size: 50px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 55px;
+        width: 100%;
+        max-width: 915px;
+      }
 
-    .section-1 p {
-      font-size: 28px;
-      opacity: 0;
-    }
+      .section-1-p1,
+      .section-1-p2 {
+        position: absolute;
+        top: 10%;
+        left: 10%;
+      }
 
-    .section-1-p1,
-    .section-1-p2 {
-      position: absolute;
-      top: 10%;
-      left: 10%;
-    }
+      .section-1-p3,
+      .section-1-p4,
+      .section-1-p5 {
+        position: absolute;
+        bottom: 10%;
+        left: 10%;
+      }
 
-    .section-1-p3,
-    .section-1-p4,
-    .section-1-p5 {
-      position: absolute;
-      bottom: 10%;
-      left: 10%;
-    }
+      /** END: SECTION 1 **/
 
-    /** END: SECTION 1 **/
+      .section-2 {
+        height: 100vh;
+        width: 100%;
+        height: 100vh;
+        background-image: url("middle.png");
+        background-size: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: #70c8c8;
+      }
 
-    .section-2 {
-      height: 100vh;
-      width: 100%;
-      height: 100vh;
-      background-image: url("middle.png");
-      background-size: 50%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-color: #70C8C8;
-    }
+      .top-position {
+        position: absolute;
+        top: 10%;
+        left: 10%;
+      }
 
+      .bottom-position {
+        position: absolute;
+        bottom: 10%;
+        left: 10%;
+      }
 
-    .top-position {
-      position: absolute;
-      top: 10%;
-      left: 10%;
-    }
+      .section-2-h1,
+      .section-2-italic-p,
+      .section-2-p2 {
+        color: white;
+      }
 
-    .bottom-position {
-      position: absolute;
-      bottom: 10%;
-      left: 10%;
-    }
+      .section-2-h1 {
+        font-size: 2rem;
+      }
 
-    .section-2-h1,
-    .section-2-italic-p,
-    .section-2-p2 {
-      color: white;
-    }
+      .section-2-italic-p {
+        font-style: italic;
+      }
 
-    .section-2-h1 {
-      font-size: 2rem;
-    }
+      .section-2-p2 {
+        opacity: 0;
+        font-size: 2rem;
+        font-size: 50px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 55px;
+        width: 100%;
+        max-width: 987px;
+        transform: translateY(300);
+      }
 
-    .section-2-italic-p {
-      font-style: italic;
-    }
+      /** END: section 2 **/
 
-    .section-2-p2 {
-      opacity: 0;
-      font-size: 2rem;
-      font-size: 50px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 55px;
-      width: 100%;
-      max-width: 987px;
-      transform: translateY(300);
-    }
+      .section-3 {
+        height: 100vh;
+        width: 100%;
+        height: 100vh;
+        background-image: url("last.png");
+        background-size: 50%;
+        background-position-x: right;
+        background-position-y: top;
+        background-repeat: no-repeat;
+        background-color: #f3f3f0;
+      }
 
-    /** END: section 2 **/
+      .section-3-h1 {
+        font-size: 2rem;
+      }
 
+      .section-3-italic-p {
+        font-style: italic;
+      }
 
+      .section-3-p1,
+      .section-3-p2,
+      .section-3-p3 {
+        position: absolute;
+        left: 10%;
+        top: 25%;
+        max-width: 442px;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 36px;
+        /* 120% */
+        opacity: 0;
+      }
+    </style>
+  </head>
 
-    .section-3 {
-      height: 100vh;
-      width: 100%;
-      height: 100vh;
-      background-image: url("last.png");
-      background-size: 50%;
-      background-position-x: right;
-      background-position-y: top;
-      background-repeat: no-repeat;
-      background-color: #F3F3F0
-    }
+  <body>
+    <div class="container">
+      <section class="section-1">
+        <p class="section-1-p1">This is a moon jellyfish</p>
+        <p class="section-1-p2">Its scientific name is Aurelia</p>
+        <p class="section-1-p3">
+          The genus was first described by Jean-Baptiste Lamarck in 1816
+        </p>
+        <p class="section-1-p4">It can grow up to 40 cm in diameter</p>
+        <p class="section-1-p5">
+          Its appearance is characterised by four oval gonads in the centre of
+          the bell
+        </p>
+      </section>
 
-    .section-3-h1 {
-      opacity: 0;
-    }
+      <section class="section-2">
+        <div class="section-2-box1 top-position">
+          <h1 class="section-2-h1">Moon Jellyfish</h1>
+          <p class="section-2-italic-p">Aurelia</p>
+        </div>
 
-    .section-3-p1,
-    .section-3-p2,
-    .section-3-p3 {
-      position: absolute;
-      left: 10%;
-      top: 25%;
-      max-width: 442px;
-      font-size: 30px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 36px;
-      /* 120% */
-    }
-  </style>
-</head>
+        <p class="section-2-p2 bottom-position">
+          The translucent moon jellyfish is a common sight along the coastline
+          of Hong Kong
+        </p>
+      </section>
 
-<body>
+      <section class="section-3">
+        <div class="section-3-box1 top-position">
+          <h1 class="section-3-h1">Moon Jellyfish</h1>
+          <p class="section-3-italic-p">Aurelia</p>
+        </div>
 
-  <div class="container">
+        <p class="section-3-p1">
+          Aurelia sp. regularly shows up in Hong Kong in July in large numbers
+          and can be found in local waters through September. One of the earlier
+          mentions of Aurelia in Hong Kong is from a PhD student who studied the
+          effects of marine life on the water intake of a local power plant in
+          the 1980s.
+        </p>
+        <p class="section-3-p2">
+          The species in Aurelia keep changing, and there is a lot of confusion
+          about how many species are in the genus. Many species used to be
+          lumped into Aurelia aurita, leaving the impression that it was a
+          cosmopolitan species.
+        </p>
+        <p class="section-3-p3">
+          However, Aurelia was recently split into 27 different species. Many of
+          these are not currently described. Currently we don’t know what
+          species of Aurelia is in Hong Kong, so it is an exciting area of
+          future research. Aurelia is considered one of the edible species of
+          jellyfish.
+        </p>
+      </section>
+    </div>
 
-    <section class="section-1">
-      <p class="section-1-p1">
-        This is a moon jellyfish
-      </p>
-      <p class="section-1-p2">
-        Its scientific name is Aurelia
-      </p>
-      <p class="section-1-p3">
-        The genus was first described by Jean-Baptiste Lamarck in 1816
-      </p>
-      <p class="section-1-p4">
-        It can grow up to 40 cm in diameter
-      </p>
-      <p class="section-1-p5">
-        Its appearance is characterised by four oval gonads in the centre of the bell
-      </p>
-    </section>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        gsap.registerPlugin(ScrollTrigger);
 
-    <section class="section-2">
-      <div class="section-2-box1 top-position">
-        <h1 class="section-2-h1 ">
-          Moon Jellyfish
-        </h1>
-        <p class="section-2-italic-p">Aurelia</p>
-      </div>
+        const screenHeight = window.innerHeight;
+        const width = window.innerWidth;
 
-      <p class="section-2-p2 bottom-position">
-        The translucent moon jellyfish is a common sight along the coastline of Hong Kong
-      </p>
+        const tl = gsap.timeline({
+          duration: 4,
+          scrollTrigger: {
+            trigger: ".container",
+            markers: true,
+            start: "top top",
+            end: "+=6000vh top",
+            pin: true,
+            anticipatePin: 1,
+            scrub: 4,
+          },
+        });
 
-    </section>
-
-    <section class="section-3">
-      <h1 class="top-position section-3-h1">Hello</h1>
-      <p class="section-3-p1">
-        Aurelia sp. regularly shows up in Hong Kong in July in large numbers and can be found in local waters through
-        September. One of the earlier mentions of Aurelia in Hong Kong is from a PhD student who studied the effects of
-        marine life on the water intake of a local power plant in the 1980s.
-      </p>
-      <p class="section-3-p2">
-        The species in Aurelia keep changing, and there is a lot of confusion about how many species are in the genus.
-        Many species used to be lumped into Aurelia aurita, leaving the impression that it was a cosmopolitan species.
-      </p>
-      <p class="section-3-p3">
-        However, Aurelia was recently split into 27 different species. Many of these are not currently described.
-        Currently we don’t know what species of Aurelia is in Hong Kong, so it is an exciting area of future
-        research. Aurelia is considered one of the edible species of jellyfish.
-      </p>
-    </section>
-
-  </div>
-
-
-
-
-
-
-
-  <script>
-
-
-    document.addEventListener("DOMContentLoaded", () => {
-
-
-      gsap.registerPlugin(ScrollTrigger);
-
-      const screenHeight = window.innerHeight;
-      const width = window.innerWidth;
-
-      const tl = gsap.timeline({
-        // duration: 5,
-        scrollTrigger: {
-          trigger: ".container",
-          markers: true,
-          start: "top top",
-          end: "bottom top",
-          pin: true,
-          anticipatePin: 1,
-          scrub: 6
-        }
+        tl.to(".section-1-p1", { opacity: 1, duration: 4 })
+          .to(".section-1-p1", { opacity: 0, duration: 4 })
+          .to(".section-1-p2", { opacity: 1, duration: 4 })
+          .to(".section-1-p2", { opacity: 0, duration: 4 })
+          .to(".section-1-p3", { opacity: 1, duration: 4 })
+          .to(".section-1-p3", { opacity: 0, duration: 4 })
+          .to(".section-1-p4", { opacity: 1, duration: 4 })
+          .to(".section-1-p4", { opacity: 0, duration: 4 })
+          .to(".section-1-p5", { opacity: 1, duration: 4 })
+          .to(".section-1-p5", { opacity: 0, duration: 4 })
+          .from(".section-2", {
+            yPercent: 100,
+            opacity: 0,
+            duration: 6,
+            ease: "linear",
+          })
+          .from(
+            ".section-2-box1",
+            { y: 200, opacity: 0, duration: 3, ease: "back" },
+            "<1"
+          )
+          .to(
+            ".section-2-p2",
+            { y: 0, opacity: 1, duration: 2, ease: "back" },
+            "<=2"
+          )
+          .from(".section-3", { yPercent: 100, opacity: 0, duration: 4 })
+          .from(".section-3-box1", {
+            y: 200,
+            opacity: 0,
+            duration: 4,
+            ease: "back",
+          })
+          .to(".section-3-p1", { opacity: 1, duration: 3 })
+          .to(".section-3-p1", { opacity: 0, duration: 3 }, "+=0.5")
+          .to(".section-3-p2", { opacity: 1, duration: 3 }, "+=0.5")
+          .to(".section-3-p2", { opacity: 0, duration: 3 }, "+=0.5")
+          .to(".section-3-p3", { opacity: 1, duration: 3 }, "+=0.5");
       });
-
-      tl
-        .to(".section-1-p1", { opacity: 1 })
-        .to(".section-1-p1", { opacity: 0 })
-        .to(".section-1-p2", { opacity: 1 })
-        .to(".section-1-p2", { opacity: 0 })
-        .to(".section-1-p3", { opacity: 1 })
-        .to(".section-1-p3", { opacity: 0 })
-        .to(".section-1-p4", { opacity: 1 })
-        .to(".section-1-p4", { opacity: 0 })
-        .to(".section-1-p5", { opacity: 1 })
-        .to(".section-1-p5", { opacity: 0 })
-        .from(".section-2", { yPercent: 100, opacity: 0, duration: 4 })
-        .from(".section-2-box1", { y: 200, opacity: 0, duration: 3, ease: "back" }, "<1")
-        .to(".section-2-p2", { y: 0, opacity: 1, duration: 2, ease: 'back' }, "<=2")
-        .from(".section-3", { yPercent: 100, opacity: 0, duration: 4 })
-        .to(".section-3-h1", { opacity: 1 })
-
-    })
-
-
-
-  </script>
-
-</body>
-
+    </script>
+  </body>
 </html>
