--- a/save2.html
+++ b/save2.html
@@ -1,176 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GSAP ScrollTrigger Paragraphs with Scrub</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
 
-      :root {
-        --primary: #56aaaa;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GSAP ScrollTrigger Paragraphs with Scrub</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
-      .img-container {
-        background-color: #57abab;
-        /* background-image: url("bg.png"); */
-        background-size: cover;
-        background-repeat: no-repeat;
-        min-height: 100vh;
-        overflow: hidden;
-        height: auto;
-      }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-      .img-container img {
-        max-width: 100%;
-        width: 100%;
-        object-fit: cover;
-        min-height: 100vh;
-        height: 100%;
-      }
+    :root {
+      --primary: #56aaaa;
+    }
 
-      main {
-        position: relative;
-      }
+    .img-container {
+      background-color:#57abab;
+      /* background-image: url("bg.png"); */
+      background-size: cover;
+      background-repeat: no-repeat;
+      min-height: 100vh;
+      overflow: hidden;
+      height: auto;
+    }
 
-      main::before {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 50%;
-        /* margin-top: -10px; */
-        /* height: 100vh; */
-        /* background: linear-gradient(180deg,rgba(86, 170, 170,1) 0%, rgba(154, 204, 204, 0.6) 27%, rgba(172, 213, 213, 0) 48%, rgba(255, 255, 255, 1) 100%); */
-        background: linear-gradient(
-          to bottom,
+    .img-container img {
+      max-width: 100%;
+      width: 100%;
+      object-fit: cover;
+      min-height: 100vh;
+      height: 100%;
+    }
+
+    main {
+      position: relative;
+    }
+
+    main::before {
+      /* border-top: 1px solid white; */
+      /* border: 1px solid red; */
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 300px;
+      /* margin-top: -10px; */
+      /* height: 100vh; */
+      /* background: linear-gradient(180deg,rgba(86, 170, 170,1) 0%, rgba(154, 204, 204, 0.6) 27%, rgba(172, 213, 213, 0) 48%, rgba(255, 255, 255, 1) 100%); */
+      background: linear-gradient(to bottom,
           #57abab 0%,
-          rgba(86, 170, 170, 0.9) 5%,
-          rgba(86, 170, 170, 0.8) 10%,
-          rgba(86, 170, 170, 0.6) 25%,
-          rgba(86, 170, 170, 0.4) 40%,
-          rgba(86, 170, 170, 0) 50%
-        );
-      }
+          #57ababe6 10%,
+          #57ababcc 20%,
+          #57abab99 30%,
+          #57abab4d 40%,
+          #57abab00 50%
+      )
+    }
 
-      .container {
-        max-width: 1280px;
-        margin: auto;
-      }
+    .container {
+      max-width: 1280px;
+      margin: auto;
+    }
 
-      main {
-        position: relative;
-      }
+    main {
+      position: relative;
+    }
 
-      main h1.title {
-        position: relative;
-        top: -100px;
-        color: white;
-        font-size: 80px;
-        max-width: 1280px;
-        margin: auto;
-        font-weight: bold;
-      }
+    main h1.title {
+      position: relative;
+      top: -150px;
+      color: white;
+      font-size: 80px;
+      max-width: 1280px;
+      margin: auto;
+      font-weight: bold;
+    }
 
-      .content {
-        display: flex;
-        gap: 30px;
-        line-height: 1.7;
-        margin-top: 100px;
-      }
+    .content {
+      display: flex;
+      gap: 30px;
+      line-height: 1.7;
+      margin-top: 30px;
+    }
 
-      .content p:first-child {
-        font-size: 20px;
-      }
+    .content p:first-child {
+      font-size: 20px;
+    }
 
-      .months-grid {
-        margin-top: 60px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
-      }
+    .months-grid {
+      margin-top: 60px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+    }
 
-      .month {
-        background-color: lightblue;
-        height: 210px;
-      }
+    .month {
+      background-color: lightblue;
+      height: 210px;
+    }
 
-      header {
-        overflow: hidden;
-      }
+    header {
+      overflow: hidden;
+    }
 
-      header::after {
-        /* content: "";
+    header::after {
+      /* content: "";
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
       height: 50px;
       background: red; */
-      }
-    </style>
-  </head>
+    }
+  </style>
+</head>
 
-  <body>
-    <header>
-      <div class="img-container"><img src="bg.png" alt="" /></div>
-    </header>
-    <main>
-      <h1 class="title container">Jellyfish July</h1>
-      <div class="content container">
-        <p>
-          One of the sea creatures that is a crucial part of that biodiversity
-          is the jellyfish. However, historically, Hong Kong's jellyfish
-          research is limited, with most records dating from the 1980s and
-          1990s. The territory's tropical location near highly biodiverse waters
-          suggests its jellyfish diversity is probably underestimated.  This
-          series of posts aims to inspire awareness about jellyfish varieties
-          and their crucial role in the seas around us. Starting in July
-          – Jellyfish July – we’ll be featuring one species per month for the
-          following year.
-        </p>
-        <p>
-          One of the sea creatures that is a crucial part of that biodiversity
-          is the jellyfish. However, historically, Hong Kong's jellyfish
-          research is limited, with most records dating from the 1980s and
-          1990s. The territory's tropical location near highly biodiverse waters
-          suggests its jellyfish diversity is probably underestimated.  This
-          series of posts aims to inspire awareness about jellyfish varieties
-          and their crucial role in the seas around us. Starting in July
-          – Jellyfish July – we’ll be featuring one species per month for the
-          following year.
-        </p>
-        <p>
-          One of the sea creatures that is a crucial part of that biodiversity
-          is the jellyfish. However, historically, Hong Kong's jellyfish
-          research is limited, with most records dating from the 1980s and
-          1990s. The territory's tropical location near highly biodiverse waters
-          suggests its jellyfish diversity is probably underestimated.  This
-          series of posts aims to inspire awareness about jellyfish varieties
-          and their crucial role in the seas around us. Starting in July
-          – Jellyfish July – we’ll be featuring one species per month for the
-          following year.
-        </p>
-      </div>
+<body>
 
-      <div class="months-grid container">
-        <div class="month">one</div>
-        <div class="month">two</div>
-        <div class="month">there</div>
-        <div class="month">four</div>
-        <div class="month">five</div>
-        <div class="month">siz</div>
-        <div class="month">7</div>
-        <div class="month">8</div>
-        <div class="month">9</div>
-        <div class="month">10</div>
-        <div class="month">11</div>
-        <div class="month">12</div>
-      </div>
-    </main>
-  </body>
+  <header>
+    <div class="img-container"><img src="bg.png" alt="">
+    </div>
+
+
+  </header>
+  <main>
+    <h1 class="title container">Jellyfish July</h1>
+    <div class="content container">
+      <p>
+        One of the sea creatures that is a crucial part of that biodiversity is the jellyfish. However, historically,
+        Hong Kong's jellyfish research is limited, with most records dating from the 1980s and 1990s. The territory's
+        tropical location near highly biodiverse waters suggests its jellyfish diversity is probably underestimated. 
+        This series of posts aims to inspire awareness about jellyfish varieties and their crucial role in the seas
+        around us. Starting in July – Jellyfish July – we’ll be featuring one species per month for the following year.
+      </p>
+      <p>
+        One of the sea creatures that is a crucial part of that biodiversity is the jellyfish. However, historically,
+        Hong Kong's jellyfish research is limited, with most records dating from the 1980s and 1990s. The territory's
+        tropical location near highly biodiverse waters suggests its jellyfish diversity is probably underestimated. 
+        This series of posts aims to inspire awareness about jellyfish varieties and their crucial role in the seas
+        around us. Starting in July – Jellyfish July – we’ll be featuring one species per month for the following year.
+      </p>
+      <p>
+        One of the sea creatures that is a crucial part of that biodiversity is the jellyfish. However, historically,
+        Hong Kong's jellyfish research is limited, with most records dating from the 1980s and 1990s. The territory's
+        tropical location near highly biodiverse waters suggests its jellyfish diversity is probably underestimated. 
+        This series of posts aims to inspire awareness about jellyfish varieties and their crucial role in the seas
+        around us. Starting in July – Jellyfish July – we’ll be featuring one species per month for the following year.
+      </p>
+    </div>
+
+
+    <div class="months-grid container">
+      <div class="month">one</div>
+      <div class="month">two</div>
+      <div class="month">there</div>
+      <div class="month">four</div>
+      <div class="month">five</div>
+      <div class="month">siz</div>
+      <div class="month">7</div>
+      <div class="month">8</div>
+      <div class="month">9</div>
+      <div class="month">10</div>
+      <div class="month">11</div>
+      <div class="month">12</div>
+    </div>
+  </main>
+</body>
+
 </html>
